fix: overflow issue and button width on tablet

--- a/src/style.css
+++ b/src/style.css
@@ -28,3 +28,7 @@
 
   --color-transparent-black: rgba(0, 0, 0, 0.2);
 }
+
+body {
+  overflow-x: hidden;
+}
